--- a/intro.tex
+++ b/intro.tex
@@ -37,7 +37,7 @@ The handler can also move data directly among GPUs via direct memory access (DMA
 For off-node requests, {\em RambutanAcc} uses GASNet~\cite{Bonachea:2002:gasnet}, a one-sided communication library % , to implement the communication handler.
 that provides non-blocking data transfer and low-latency signaling mechanisms. % , allowing inter-process communication to be overlapped with computations efficiently.
 
-We use {\em RambutanAcc} to explore suitable set of optimizations for 4 HPC benchmarks: sparse cholesky factorization, Viola-Jones face recognition, communication-avoiding Cannon's matrix multiplication~\cite{25Dcannon}, and a 3D stencil solver for Laplace's equation.
+We use {\em RambutanAcc} to explore suitable set of optimizations for four HPC benchmarks: sparse cholesky factorization, Viola-Jones face recognition, communication-avoiding Cannon's matrix multiplication~\cite{25Dcannon}, and a 3D stencil solver for Laplace's equation.
 %\samW{needs to be consistent with sec5... missing ML code}
 The results show that the performance improves significantly and meets the performance level of our painstakingly hand-optimized code variant.
 %{\em RambutanAcc} also hides communication costs that cannot be avoided.\samW{how is this different than the previous sentence?}
@@ -48,7 +48,7 @@ The contributions of the paper are three-fold.
 \begin{itemize}
 \item A task-based programming model that can reveal a significant amount of dynamic parallelism in an application
 \item A runtime system that supports a rich set of task scheduling and communication handling policies for learning the impact of various optimizations on the performance
-\item A thorough experimental study using 4 HPC benchmarks 
+\item A thorough experimental study using four HPC benchmarks 
 \end{itemize}
 
 The rest of this paper is organized as follows.
