--- a/results.tex
+++ b/results.tex
@@ -41,7 +41,7 @@ The compute-intensive {\em update} kernel is executed on the GPU workers.
 %An interesting path to explore is the tradeoff between coarse and fine-grained scheduling policies.  
 %For sparse cholesky, the matrix is represented by many small CSC tiles.\samW{the previous sentence repeats the one}
 %Thus, even a small problem size can result in many tasks.
-We implement 2 code variants, which are just slightly different from each other.
+We implement two code variants, which are just slightly different from each other.
 The first code variant implements the {\em Update} phase with {\em type-3} task to launch the sparse matrix multiply kernel on the whole GPU, and hence the name {\em CUDA Launch}.
 The other code variant is called {\em persistent kernel}, since it employs {\em type-2} task, which can be scheduled on a group of SMs by the persistent kernel. 
 Fig.~\ref{fig:coarseFine} shows results of sparse cholesky under two scheduling policies.
@@ -53,7 +53,7 @@ We observe that for many input matrices tasks run more efficiently after reducin
 Since there are many tasks that can be runnable at a time, the scheduler can keep all SMs busy at very small overhead.
 Fig~\ref{fig:nWorkers} shows the optimal number of workers on a K80 GPU for Sparse Cholesky Factorization when the degree of sparsity of the input matrix varies.
 If the sparse matrix is filled with many tasks we have more parallelism, allowing us to configure the GPUs with more workers.
-Note that we picked these 3 numbers to represent wide ranges of sparsity, and the actual number in practice may fall somewhere in these ranges. 
+Note that we picked these three numbers to represent wide ranges of sparsity, and the actual number in practice may fall somewhere in these ranges. 
 
 
 \begin{figure}[htb]
@@ -68,7 +68,7 @@ Note that we picked these 3 numbers to represent wide ranges of sparsity, and th
 \caption{If there is enough parallelism (matrix is filled with more non-zeros), increasing \#workers may increase performance}
 \label{fig:nWorkers}
 \end{subfigure}
-\caption{Left: the persistent kernel with 2 workers/GPU improves the performance. For this experiment, the degrees of sparsity are low (under 30\%). Right: for matrices with higher degrees of sparsity, increasing the number of workers  may further improve the performance}
+\caption{Left: the persistent kernel with two workers/GPU improves the performance. For this experiment, the degrees of sparsity are low (under 30\%). Right: for matrices with higher degrees of sparsity, increasing the number of workers  may further improve the performance}
 %\samW{note left vs. right;  for left, what is the sparsity???  where does the matrix come from???}}
 \label{fig:coarseFine}
 \end{figure}
@@ -170,13 +170,13 @@ The additional performance improvement is due to reducing scheduling overhead by
 \begin{subfigure}[b]{0.47\textwidth}
 \centering
 \includegraphics[width=0.9\textwidth]{figures/stencil_single_node_tida.pdf}
-\caption{A compute node with 6 Kepler GPUs (3 K80 cards) connected via a shared PCIe bus}
+\caption{A compute node with six Kepler GPUs (3 K80 cards) connected via a shared PCIe bus}
 \label{stencil_single_node_tida}
 \end{subfigure}
 \begin{subfigure}[b]{0.47\textwidth}
 \centering
 \includegraphics[width=0.9\textwidth]{figures/stencil_single_node_summit.pdf}
-\caption{A compute node with 4 Pascal (P100) GPUs. GPUs \#1 and \#2, \#3 and \#4 are paired together via an NVlink interconnect.}
+\caption{A compute node with four Pascal (P100) GPUs. GPUs \#1 and \#2, \#3 and \#4 are paired together via an NVlink interconnect.}
 \label{stencil_single_node_summit}
 \end{subfigure}
 \caption{Strong scaling study of 3D stencil on single compute nodes. Problem size $512^3$.
@@ -198,7 +198,7 @@ A task can be run when the previous iteration on this data partition finishes an
 A challenge for this code is that the communication cost is relatively significant.
 Not only does GPUs implementation introduce extra cost of transferring data among host and GPUs, it also puts more pressure on the communication by improving the computation rate due to its high memory bandwidth.
 Thus, it is interesting to use {\em RambutanAcc} to study the impact of hiding/lowering such communication costs.
-For this study, we implement 4 code variants.
+For this study, we implement four code variants.
 The first variant, {\em MPI-Basic} uses blocking CUDA transfers to implement the communication among host and GPU, and it uses MPI primitives for communication among hosts. 
 We port this code on Rambutan using {\em type-3} tasks, which offloads the same CUDA kernel in {\em MPI-Basic} to the whole GPU.
 However, it performs a non-blocking kernel launch with a CUDA stream given by RambutanAcc, allowing the runtime to schedule ready tasks while servicing communication for other tasks.
@@ -206,24 +206,24 @@ Using the same task graph, we configure the communication handler of RambutanAcc
 The last code variant is not a correct code, since we shut off all types of communication in {\em MPI-Basic}. 
 This variant shows the best performance we can realize.
 
-Fig.~\ref{fig:stencil_single_nodes} shows the strong scaling performance of 4 code variants on single compute nodes, one consisting of 6 GPUs connected via a shared PCIe bus whereas the other consists of 4 Pascal GPUs split in to 2 sockets each pairing 2 GPUs with NVLink connection. 
+Fig.~\ref{fig:stencil_single_nodes} shows the strong scaling performance of four code variants on single compute nodes, one consisting of six GPUs connected via a shared PCIe bus whereas the other consists of four Pascal GPUs split in to two sockets each pairing two GPUs with NVLink connection. 
 On the 6-GPU compute node, we can easily see that the communication has a notable impact on the scalability of {\em MPI-Basic}.
 Under this circumstance, hiding communication is always effective whether or not we have to route data through the host.
-{\em Rambutan} and {\em RambutanAcc-noDMA} run at the same rate on 2 GPUs.
-However, on 6 GPUs when we don't have enough computation to hide communication, the benefit of overlapping becomes less significant.
+{\em Rambutan} and {\em RambutanAcc-noDMA} run at the same rate on two GPUs.
+However, on six GPUs when we don't have enough computation to hide communication, the benefit of overlapping becomes less significant.
 This explains why RambutanAcc substantally outperforms {\em RambutanAcc-noDMA}.
 On the compute node with NVLink, the impact of communication is less significant.
-Note that the GPU kernel on P100 runs 3 times as fast as the GPU in the K80 card, but {\em MPI-Basic} scales fairly well.
+Note that the GPU kernel on P100 runs 3$\times$ as fast as the GPU in the K80 card, but {\em MPI-Basic} scales fairly well.
 This can be explained by the significant improvement in host-GPU bandwidth provided by NVLink.
-In this scenario, on 2 GPUs the impact of communication overlap and direct GPUs communication is not significant.
-On 4 GPUs, we expect {\em RambutanAcc} to outperform {\em MPI-Basic} since the communication overhead increases due to the communication among 2 sockets.
+In this scenario, on two GPUs the impact of communication overlap and direct GPUs communication is not significant.
+On four GPUs, we expect {\em RambutanAcc} to outperform {\em MPI-Basic} since the communication overhead increases due to the communication among two sockets.
 However, the actual improvement is quite modest.
 After a thorough investigation, we found out that at one point in the communication handler we have to use non-pinned memory to buffer and forward data from a remote node to the GPU.
 Transferring data between host and GPU using non-pinned memory requires an extra memory copy which is generally very costly.
 We hope that in the future GASNET will allow us to attach a pre-allocated pinned memory buffer as a GASNet shared memory segment.
-When this support is available, {\em RambutanAcc} should perform well on 4 P100 GPUs.
-Another possible way to improve the performance on these 4 GPUs is to connect all GPUs with NVlink instead of with the host.
-With such configuration we expect {\em RambutanAcc} to meet the ideal performance as it does on 2 GPUs.
+When this support is available, {\em RambutanAcc} should perform well on four P100 GPUs.
+Another possible way to improve the performance on these four GPUs is to connect all GPUs with NVlink instead of with the host.
+With such configuration we expect {\em RambutanAcc} to meet the ideal performance as it does on two GPUs.
 
 
 
@@ -252,7 +252,7 @@ On a single node, we don't have enough GPU to replicate the GPU mesh of an MPI p
 Thus, we use a 2D variant of the Cannon algorithm {\em MPI-Basic-2D}.
 To have fair comparisons, we also run the RambutanAcc variant in 2D form where there is no advantage of avoiding communication.
 This variant includes {\em RambutanAcc 2D-noDMA} and {\em RambutanAcc 2D}.
-To study the total impact of 3 optimizations (communication overlap, avoiding, and direct communication) we employ {\em RambutanAcc 2.5D}.
+To study the total impact of three optimizations (communication overlap, avoiding, and direct communication) we employ {\em RambutanAcc 2.5D}.
 
 Fig.~\ref{cannon_onnode} shows the performance of these variants when the matrix size varies.
 It can be seen that the communication overhead is very high in this experiment.
@@ -265,7 +265,7 @@ Communication can be reduced to a level where communication overlap can work rea
 We can see that the performance significantly boosts up with {\em RambutanAcc 2D}.
 {\em RambutanAcc 25D} is the most interesting case.
 This is not really the original communication avoiding technique because we use "virtualized" GPUs (via tasks) to replicate the matrix. 
-Thus, we actually realizes the benefits from 2 techniques.
+Thus, we actually realizes the benefits from two techniques.
 The performance of this code variant is very close to the peak performance where all communication is shut off.
 
 
