--- a/related.tex
+++ b/related.tex
@@ -1,16 +1,16 @@
 The benefit of using a data-driven execution model on traditional multi-core processors has been recognized by the HPC community for years, e.g. Cilk/Cilk++~\cite{cilk,BlumofeJoKu95}, Charm/Charm++~\cite{charm++}, Tarragon/Bamboo~\cite{cicotti11:dissertation,bamboo, bamboo-LU, bambooThesis}, DPLASMA\cite{dplasma,Bosilca:2012:DAGuE}, OMPSs~\cite{ompss,nexus}, and Habanero-C MPI~\cite{Chatterjee:2013:HCMPI}.
-However, the question of whether a task dependency graph program with many fine-grained tasks can run efficiently on an accelerator such as GPUs has not yet been thoroughly answered.
-As a result, many current runtimes for GPUs schedule each single task on the whole GPUs (e.g. Legion~\cite{legion} and CNC-HC~\cite{cnc-hc}).
+However, the question of whether a task dependency graph program with many fine-grained tasks can run efficiently on an accelerator (e.g. GPU) has not yet been thoroughly answered.
+As a result, many current runtimes for GPUs schedule each single task on the whole GPU (e.g. Legion~\cite{legion} and CNC-HC~\cite{cnc-hc}).
 As the number of cores per accelerator increases quickly, this limitation puts the programmer under the pressure of optimizing their kernels so they can scale linearly as the accelerator architecture evolves.
 
-Recently more research has been focusing on launching a CUDA kernel on a portion of the GPUs.
+Recently more research has been focusing on launching a CUDA kernel on a portion of the GPU.
 In~\cite{fillNRetreat}, Wu et al. presented a technique called {\em fill and retreat}, which allows a CUDA kernel to run on a group of selected SMs.
-With this technique the programmer can efficiently bundle multiple CUDA kernels to run on a single GPUs at a time.
+With this technique the programmer can efficiently bundle multiple CUDA kernels to run on a single GPU at a time.
 Abdelfattah et al. also used a similar technique to batch small CUDA kernels in a cholesky factorization program in order to improve the throughput~\cite{batchedCholesky}.
 Our solution relies on a task scheduler to factor the scheduling policy out of the application program.
 As a result, the programmer can take the benefit of fine-grained scheduling at a very small amount of programming cost.
 
-Multi-GPUs programming is also an important support because the memory capacity of each individual GPUs is very limited.
+Multi-GPU programming is also an important support because the memory capacity of each individual GPU is very limited.
 There are MPI implementations that provide this support, e.g. MPI-ACC~\cite{mpiacc, mpiacc1} and Mvapich~\cite{mvapich2gpu}.
 However, with these tools the programmer has to explicitly move data.
 RambutanAcc provides a dataflow programming model that supports distributed-memory architectures, allowing the runtime to move data across memory address spaces transparently.
