--- a/motivation.tex
+++ b/motivation.tex
@@ -6,12 +6,12 @@ Heterogeneous programming is challenging~\cite{exascaleRoadMap}, mainly because 
 Even when an application performs well on accelerators, load imbalance arises since CPUs and accelerators run at different rates.
 Beside the problems above, the programmer has to handle the communication between CPUs and accelerators, e.g. via PCIe, NVLink, etc.
 % (see Fig.~\ref{fig:sysArch}).
+
 To avoid these problems, compute nodes can be based on stand-alone many-core processors such as the Intel's second generation Xeon Phi processor (KNL).
-However, applications consisting of both task and data parallelism may not suit well to such homogeneous design.
+However, applications consisting of both task and data parallelism may not be well-suited to such homogeneous designs.
 In addition, realizing expected performance on stand-alone many-core processors also requires expert programming skills
 to manually manage data movement and locality.
-
-
+In this paper, we focus on tackling challenges associated with the heterogeneous CPU-GPU node design, though our solution can also support the homogeneous case and be extended to support other accelerator architectures.
 
 %\begin{figure}[htb]
 %\centering
@@ -30,4 +30,3 @@ to manually manage data movement and locality.
 %\end{figure}
 
 
-In this paper, we focus on tackling challenges associated with the heterogeneous CPU-GPU node design, though our solution can also support the homogeneous case as well as being extended to support other accelerator architectures.
